--- a/ClothingShopT1/style.css
+++ b/ClothingShopT1/style.css
@@ -218,13 +218,13 @@ footer {
   }
 
   .product {
-    width: calc(50% - 20px); /* 2 items per row */
+    width: calc(50% - 20px);
   }
 }
 @media (max-width: 480px) {
 
   .product {
-    width: 100%; /* 1 item per row */
+    width: 100%;
   }
 
   form {
