--- a/ClothingShopT1/style.css
+++ b/ClothingShopT1/style.css
@@ -205,7 +205,7 @@ footer {
   }
 
   .sidebar {
-    width: 100%;
+    width: 200px;
     text-align: center;
   }
 
@@ -243,3 +243,4 @@ footer {
     height: 120px;
   }
 }
+
