Refactor CSS for improved readability and structure

--- a/ClothingShopT1/style.css
+++ b/ClothingShopT1/style.css
@@ -205,7 +205,7 @@ footer {
   }
 
   .sidebar {
-    width: 100px;
+    width: 100%;
     text-align: center;
   }
 
@@ -247,6 +247,7 @@ footer {
     height: 120px;
   }
 }
+
 
 
 
