--- a/ClothingShopT1/style.css
+++ b/ClothingShopT1/style.css
@@ -34,6 +34,7 @@ header .logo {
   width: 200px;
   background: #A9A9A9;
   padding: 15px;
+  position: relative;
 }
 
 .sidebar ul {
@@ -247,6 +248,7 @@ footer {
     height: 120px;
   }
 }
+
 
 
 
