--- a/ClothingShopT1/style.css
+++ b/ClothingShopT1/style.css
@@ -34,7 +34,6 @@ header .logo {
   width: 200px;
   background: #A9A9A9;
   padding: 15px;
-  position: relative;
 }
 
 .sidebar ul {
@@ -154,7 +153,10 @@ footer {
   border: none; 
   border-radius: 5px; }
 
-.btn-logout:hover { background-color: #000000; }
+.btn-logout:hover { 
+  background-color: #000000; 
+}
+
 footer {
   background: #000000;
   color: #ffffff;
@@ -222,10 +224,7 @@ footer {
     width: calc(50% - 20px);
   }
 }
- .container {
-    flex-direction: column;
-  }
-}
+
 @media (max-width: 480px) {
 
   .product {
@@ -248,6 +247,7 @@ footer {
     height: 120px;
   }
 }
+
 
 
 
