--- a/ClothingShopT1/style.css
+++ b/ClothingShopT1/style.css
@@ -196,6 +196,7 @@ footer {
     justify-content: center;
     align-items: center;
     text-align: center;
+    width:100%;
   }
 
   header .logo {
@@ -247,6 +248,7 @@ footer {
     height: 120px;
   }
 }
+
 
 
 
