--- a/ClothingShopT1/style.css
+++ b/ClothingShopT1/style.css
@@ -16,6 +16,7 @@ header {
   display: flex;
   align-items: center;      
   justify-content: center;  
+  width: 100%;
   gap: 10px;              
 }
 
@@ -248,6 +249,7 @@ footer {
     height: 120px;
   }
 }
+
 
 
 
