--- a/ClothingShopT1/style.css
+++ b/ClothingShopT1/style.css
@@ -16,7 +16,6 @@ header {
   display: flex;
   align-items: center;      
   justify-content: center;  
-  width: 100%;
   gap: 10px;              
 }
 
@@ -197,7 +196,7 @@ footer {
     justify-content: center;
     align-items: center;
     text-align: center;
-    width:100%;
+    position: sticky;
   }
 
   header .logo {
@@ -249,6 +248,7 @@ footer {
     height: 120px;
   }
 }
+
 
 
 
