--- a/ClothingShopT1/style.css
+++ b/ClothingShopT1/style.css
@@ -196,7 +196,7 @@ footer {
     justify-content: center;
     align-items: center;
     text-align: center;
-    position: sticky;
+    position: relative;
   }
 
   header .logo {
@@ -248,6 +248,7 @@ footer {
     height: 120px;
   }
 }
+
 
 
 
