--- a/ClothingShopT1/style.css
+++ b/ClothingShopT1/style.css
@@ -191,91 +191,60 @@ footer {
 /* Responsive adjustments */
 @media (max-width: 768px) {
 
-  body {
-    font-size: 16px;
-  }
-
-  
   header {
-    flex-direction: column;
-    gap: 5px;
-    padding: 10px;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    position: relative;
   }
 
   header .logo {
-    height: 70px;
-    margin: 0;
+    height: 80px;
+    margin: 0 10px 0 0;
   }
 
-  
   .container {
     flex-direction: column;
   }
 
-  
   .sidebar {
     width: 100%;
     text-align: center;
-    padding: 10px;
   }
 
   .sidebar ul li {
     margin: 5px 0;
   }
 
-  .sidebar ul li a {
-    padding: 10px;
-  }
-
-  
-  main {
-    padding: 15px;
-  }
-
-  
   .products {
     justify-content: center;
   }
 
   .product {
-    width: 100%;  
-  }
-
-  .product img {
-    height: 180px;
-  }
-
-  
-  .profile-pic {
-    width: 150px;
-    height: 150px;
-  }
-  
-  form {
-    width: 90%;
-    margin: 30px auto;
-  }
-
-  button,
-  .btn,
-  .btn-logout {
-    width: 100%;
-    margin-top: 10px;
-  }
-
-  footer {
-    font-size: 14px;
-    padding: 8px;
+    width: calc(50% - 20px);
   }
 }
 
+@media (max-width: 480px) {
 
+  .product {
+    width: 100%;
+  }
 
+  form {
+    width: 90%;
+    margin: 20px auto;
+    padding: 15px;
+  }
 
+  button {
+    width: 100%;
+    font-size: 14px;
+  }
 
-
-
-
-
-
-
+  .profile-pic {
+    width: 120px;
+    height: 120px;
+  }
+}
